src/assets/homepage.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Poppins';
}

section.parallax {
    overflow: hidden;
    position: relative;
}

.parallax {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    width: 100%;
}

#text {
    font-size: 350%;
    position: relative;
    color: #fff;
    text-shadow: 2px 2px 4px rgba(0,0,0,.2);
}

.parallax img {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    pointer-events: none;
    min-height: 100vh;
    object-fit: cover;
}

.sec {
    position: relative;
    background: #003329;
    padding: 20px;
    padding-top: 40px;
    text-align: center;
}

.sec h2 {
    font-size: 3em;
    color: #fff;
}

.sec p {
    font-weight: 400;
    color: white;
    font-size: 28px;
    margin-top: 40px;
}

.skill-item {
    position: relative;
    max-width: 250px;
    width: 100%;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 60px;
    color: #555;
}

.chart-container {
    position: relative;
    width: 100%;
    height: 0;
    padding-top: 100%;
    margin-bottom: 27px;
    border: 3px solid white;
    border-radius: 50px;
    background: white;
}

.skill-item .chart,
.skill-item .chart canvas{
    position: absolute;
    top: 0;
    left: 0;
    width: 100% !important;
    height: 100% !important;
}

.skill-item .chart:before {
    content: "";
    width: 0;
    height: 100%;
}

.skill-item .chart:before,
.skill-item .percent {
    display: inline-block;
    vertical-align: middle;
}

.skill-item .percent {
    position: relative;
    line-height: 1;
    font-size: 70px;
    color: #333;
    font-weight: 400;
    z-index: 2;
}

.skill-item .percent:after {
    content: attr(data-after);
    font-size: 20px;
}

.sec2 {
    position: relative;
    background: #d2e296;
    padding-bottom: 50px;
}

